[package]
name = "tokio-websocket-client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
flume = "0.11.1"

[dev-dependencies]
reqwest = "0.12.15"
reqwest-websocket = "0.4.4"
simple_logger = "5.0.0"
